--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <nav class="nav-links">
                 <ul class="nav-links">
                   <li class="nav-links-item">
-                    <a href="./index.html" class="link">Студия</a>
+                    <a href="./index.html" class="link current">Студия</a>
                   </li>
                   <li class="nav-links-item">
                     <a href="./portfolio.html" class="link">Портфолио</a>
@@ -335,7 +335,7 @@
       <div class="container">
       <h2 class="title">Постоянные клиенты</h2>
       <ul class="flex-customers">
-        <div class="customers-animation">
+        
           <li class="customers-item">
             <a href="" class="customers-link">
               <!-- <img src="./images/logo-1-optim.svg" alt="лого Я и Ко" /> -->
@@ -344,7 +344,7 @@
               </svg>
             </a>
           </li>
-        </div>
+        
         <li class="customers-item">
           <a href="" class="customers-link">
             <svg class="customers-brend" width="40" height="52">
