--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
                     <a href="./index.html" class="link">Студия</a>
                   </li>
                   <li class="nav-links-item">
-                    <a href="./portfolio.html" class="link">Портфолио</a>
+                    <a href="./portfolio.html" class="link current">Портфолио</a>
                   </li>
                   <li class="nav-links-item">
                     <a href="" class="link">Контакты</a>
